Task7/gatekeeper/constraint-templates/unasnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsprunasnonroot
  annotations:
    metadata.gatekeeper.sh/title: "Run As Non Root"
    description: >-
      Requires containers to run as non-root users.
      Corresponds to the `runAsNonRoot` field in a PodSecurityPolicy.
spec:
  crd:
    spec:
      names:
        kind: K8sPSPRunAsNonRoot
      validation:
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: K8sNativeValidation
          source:
            variables:
              - name: containers
                expression: 'has(variables.anyObject.spec.containers) ? variables.anyObject.spec.containers : []'
              - name: initContainers
                expression: 'has(variables.anyObject.spec.initContainers) ? variables.anyObject.spec.initContainers : []'
              - name: ephemeralContainers
                expression: 'has(variables.anyObject.spec.ephemeralContainers) ? variables.anyObject.spec.ephemeralContainers : []'
              - name: exemptImagePrefixes
                expression: |
                  !has(variables.params.exemptImages) ? [] :
                    variables.params.exemptImages.filter(image, image.endsWith("*")).map(image, string(image).replace("*", ""))
              - name: exemptImageExplicit
                expression: |
                  !has(variables.params.exemptImages) ? [] : 
                    variables.params.exemptImages.filter(image, !image.endsWith("*"))
              - name: exemptImages
                expression: |
                  (variables.containers + variables.initContainers + variables.ephemeralContainers).filter(container,
                    container.image in variables.exemptImageExplicit ||
                    variables.exemptImagePrefixes.exists(exemption, string(container.image).startsWith(exemption))).map(container, container.image)
              - name: badContainers
                expression: |
                  (variables.containers + variables.initContainers + variables.ephemeralContainers).filter(container,
                    !(container.image in variables.exemptImages) && 
                    (!has(container.securityContext) ||
                    !has(container.securityContext.runAsNonRoot) ||
                    container.securityContext.runAsNonRoot != true)
                  ).map(container, container.name)
            validations:
              - expression: '(has(request.operation) && request.operation == "UPDATE") || size(variables.badContainers) == 0'
                messageExpression: '"Containers must run as non-root: " + variables.badContainers.join(", ")'
        - engine: Rego
          source:
            rego: |
              package k8spsprunasnonroot
              
              import data.lib.exclude_update.is_update
              import data.lib.exempt_container.is_exempt
              
              violation[{"msg": msg, "details": {}}] {
                  # spec.containers.securityContext.runAsNonRoot field is immutable.
                  not is_update(input.review)
              
                  c := input_containers[_]
                  not is_exempt(c)
                  input_run_as_non_root(c)
                  msg := sprintf("Containers must run as non-root: %v", [c.name])
              }
              
              input_run_as_non_root(c) {
                  not has_field(c, "securityContext")
              }
              input_run_as_non_root(c) {
                  not c.securityContext.runAsNonRoot == true
              }
              
              input_containers[c] {
                  c := input.review.object.spec.containers[_]
              }
              input_containers[c] {
                  c := input.review.object.spec.initContainers[_]
              }
              input_containers[c] {
                  c := input.review.object.spec.ephemeralContainers[_]
              }
              
              # has_field returns whether an object has a field
              has_field(object, field) = true {
                  object[field]
              }
            libs:
              - |
                package lib.exclude_update
                
                is_update(review) {
                    review.operation == "UPDATE"
                }
              - |
                package lib.exempt_container
                
                is_exempt(container) {
                    exempt_images := object.get(object.get(input, "parameters", {}), "exemptImages", [])
                    img := container.image
                    exemption := exempt_images[_]
                    _matches_exemption(img, exemption)
                }
                
                _matches_exemption(img, exemption) {
                    not endswith(exemption, "*")
                    exemption == img
                }
                
                _matches_exemption(img, exemption) {
                    endswith(exemption, "*")
                    prefix := trim_suffix(exemption, "*")
                    startswith(img, prefix)
                }
